--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -3,6 +3,9 @@
   "telemetry.enableTelemetry": false,
   "telemetry.enableCrashReporter": false,
 
+  // Windows settings
+  "window.zoomLevel": 0,
+
   // Workbench settings
   "workbench.startupEditor": "none",
   "workbench.colorTheme": "Visual Studio Dark",
@@ -27,15 +30,21 @@
     }
   },
   
-  // Integrated Terminal
-  "terminal.external.windowsExec": "C:\\WINDOWS\\System32\\cmd.exe",
-  
+  // Integrated Terminal (Cmder support)
+  "terminal.external.windowsExec": "C:\\Dev\\05_Tools\\cmder\\cmder.exe",
+  "terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\cmd.exe",
+  // "terminal.integrated.shellArgs.windows": [
+  //   "/k",
+  //   "C:\\Dev\\05_Tools\\cmder\\vendor\\init.bat"
+  // ],
+
   // PHP settings
+  "php.validate.executablePath": "C:\\Dev\\01_XAMPP\\php7.4.2\\php\\php.exe",
+  "php.validate.enable": false,
   "php.suggest.basic": false,
-  "php.validate.executablePath": "C:\\Dev\\01_XAMPP\\php7.4.2\\php\\.php.exe",
 
   // Python settings
-  "python.pythonPath": "python",
+  "python.pythonPath": "C:\\Dev\\05_Tools\\Miniconda3\\python.exe",
   "python.globalModuleInstallation": false,
   "python.jediEnabled": false,
   
@@ -58,7 +67,6 @@
   "code-runner.showExecutionMessage": false,
   "code-runner.executorMap": {
     "python": "$pythonPath -u $fullFileName",
-    "php": "$phpPath $fullFileName"
+    "php": "C:\\Dev\\01_XAMPP\\php7.4.2\\php\\php.exe -f $fullFileName"
   },
-  "git.autofetch": true
 }
